fix paginator width on mobile

--- a/djangocms_admin_style/sass/components/_mobile.scss
+++ b/djangocms_admin_style/sass/components/_mobile.scss
@@ -138,9 +138,6 @@ body.login {
             }
         }
     }
-    #toolbartable .paginator {
-        width: calc(100% - 30px - 6%) !important;
-    }
     #changelist {
         position: static;
         .actions select {
@@ -168,9 +165,9 @@ body.login {
     #changelist.filtered .actions {
         margin-right: 0 !important;
     }
+    #changelist .paginator,
     #changelist.filtered .paginator {
-        position: static;
-        width: auto!important;
+        width: calc(100% - 30px - 6%) !important;
     }
     .module #changelist-form .results {
         overflow: auto;
